--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,30 +1,38 @@
 pipeline{
     agent 'any'
 
+    environment{
+        
+        def scannerHome = tool  'sonar-10.0'
+    }
     stages {
 
-        stage ("checkout stage") {
-
-            steps{
-
-                     echo "checking the code from git repository"
+        stage("Build Stage")
+        {
+            steps {
+                 sh """
+                mvn install
+                ls -lrt target/
+                mv target/*.jar  target/demoapp-${BUILD_NUMBER}.jar
+                ls -lrt target/
+                 """
             }
-
            
         }
 
-        stage("Builing stage"){
-
+        stage("code analysis")
+        {
             steps{
-
-            sh """
-                ls -lrt
-                mvn install
-                cd target/
-                ls -lrt
-            """
+                with
             }
-         
+        }
+        
+         stage("Code Analysis"){
+            steps {
+                withSonarQubeEnv('sonar-10.0') {
+                    sh "mvn sonar:sonar"
+                }
+            }
         }
     }
 }
