Jenkins file added

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,10 @@ pipeline{
     stages{
         stage("env stage")
         {
-            sh "env"
+            steps {
+                    sh "env"
+            }
+            
         }
     }
 }
